--- a/index.html
+++ b/index.html
@@ -324,6 +324,14 @@
             <p>Currently Form is not working</p>
         </div>
     </div>
+
+    <div class="icon-bar">
+        <a href="https://www.facebook.com/Oraliah-104903218494464" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/Oraliah_dental" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
+        <a href="https://www.instagram.com/oraliah_dental/" target="_blank" class="google"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/oraliah" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
+        <a href="https://www.youtube.com/channel/UChELSHppz4qxHDHu8u9XMCg" target="_blank" class="youtube"><i class="fa fa-youtube"></i></a>
+    </div>
     <script src="js/jquery.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/wow.min.js"></script>
