--- a/index.html
+++ b/index.html
@@ -181,13 +181,12 @@
                     <p>Do you want to correct dental problems like overcrowded teeth, Spacing Issues, Minor Overbites & Underbites? Are you no longer in love with your cosmetic braces? With Oraliah Dental, one of the best dental clinics in Bangalore, patients
                         can enjoy straightened teeth and a beautiful smile with Aligners without any burden. All you need to do is fill up the above registration form and one of Bangalore’s best dentists will call you to fix the time of appointment and
                         also answer to all your queries.
-
                     </p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="doctor_profile wow fadeIn">
+    <!-- <section class="doctor_profile wow fadeIn">
         <div class="container">
             <h2>Doctor's Profile</h2>
             <div class="main-sl">
@@ -221,6 +220,29 @@
                 </div>
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
+            </div>
+        </div>
+    </section> -->
+
+    <section class="group_details">
+        <div class="container">
+            <h2>Doctor's Profile</h2>
+            <div class="main-gr">
+                <div class="left wow fadeInLeftBig" data-wow-delay="100ms">
+                    <img src="images/group.jpg" alt="">
+                </div>
+                <div class="right">
+                    <ul>
+                        <li class="wow fadeInUp" data-wow-delay="200ms"><strong> Dr. Pooja </strong>joined Oraliah in March 2021.She has an overall 5 years experience as a clinician. Her prime responsibilities as a Center Head include practice management in the clinic for better operational efficiency.
+                            She also takes care of financial reconciliation, management of the clinic, coordinating supply chain for procurement of dental materials, and personnel management.</li>
+                        <li class="wow fadeInUp" data-wow-delay="500ms"><strong>Dr. Shazaan Nasar</strong> joined Oraliah Dental Clinics as the General Manager. He takes care of Operations and Business Development for the clinic and is involved in regular patient-handling. He aims at aesthetics and
+                            ensures all diagnostic and patient treatment are handled with utter care and concern.</li>
+                        <li class="wow fadeInUp" data-wow-delay="1s"><strong>Dr Eva</strong> is a dedicated practitioner who believes in the philosophy of minimal intervention dentistry. She has a more conservative diagnostic approach in her treatments emphasizing on improvement of the overall health
+                            of the patient's smile. She doesn't mind going the extra mile to ensure that the treatment provided is pain-free and comfortable for the patients.</li>
+
+
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
@@ -305,13 +327,22 @@
             <button class="btn-co cl_reg">Register Now</button>
         </div>
     </section>
+    <section class="disclaimer">
+        <div class="container">
+            <p><strong>Disclaimer: </strong><br>This information for us is highly confidential. No contact details will be used for any marketing campaigns and only will be used to send newsletters and education materials on how to maintain oral health related
+                topics.
+            </p>
+        </div>
+    </section>
     <footer>
         <div class="container">
             <div class="main-foo">
                 <div class="left">
                     <img src="images/oralia-logo.png" alt="">
                 </div>
+
                 <div class="right">
+
                     <p>© 2022 Oraliah Dental Clinics. All rights reserved.</p>
                 </div>
             </div>
