--- a/landing-2/index.html
+++ b/landing-2/index.html
@@ -72,101 +72,27 @@
         </section>
     </div>
 
-    <section class="our-dent wow fadeIn " data-wow-delay="500ms">
+    <section class="invisalign">
         <div class="container">
-            <div class="main-out">
-                <ul>
-                    <li class="wow fadeIn">
-                        <img src="images/our.jpg" alt="">
-                    </li>
-                    <li class="wow fadeInUp" data-wow-delay="100ms">
-                        <div class="inn">
-                            <figure><img class="ic" src="images/icons/1.png" alt=""></figure>
-                            <h2>Digital Smile Design in Bangalore</h2>
-                            <p>Digital Smile Design or DSD is a computerized way to envision and create how your teeth & smile would look like after accomplishing certain cosmetic procedures & restorative treatments </p>
-                        </div>
-                    </li>
-                    <li class="wow fadeInUp" data-wow-delay="200ms">
-                        <div class="inn">
-                            <figure><img class="ic" src="images/icons/2.png" alt=""></figure>
-                            <h2>Teeth Whitening</h2>
-                            <p>Teeth whitening in Bangalore is an easy and affordable way to clean & transform yellow, discoloured and stained teeth. It helps to create a brighter, more visually appealing smile. It gives an overall new look to the patient’s
-                                facial appearance</p>
-                        </div>
-                    </li>
-                    <li class="wow fadeInUp" data-wow-delay="300ms">
-                        <div class="inn">
-                            <figure><img class="ic" src="images/icons/3.png" alt=""></figure>
-                            <h2>Custom Braces</h2>
-                            <p>Customised braces offer a precision treatment for straightening teeth. It is very different from traditional braces. It helps orthodontic surgeons in Bangalore to carry out their treatment procedure in a faster, more efficient,
-                                and more comfortable way</p>
-                        </div>
-                    </li>
-                    <li class="wow fadeInUp" data-wow-delay="400ms">
-                        <div class="inn">
-                            <figure><img class="ic wid-inc" src="images/icons/4.png" alt=""></figure>
-                            <h2>Aligners</h2>
-                            <p>Aligners are unique trays that are practically invisible and are used to accomplish to help misaligned or crooked teeth get moving to a more conventional position. We are one of the best dental clinics in Bangalore and deal
-                                only in branded aligners like Invisalign, illusions aligners, straumann and care correct</p>
-                        </div>
-                    </li>
-                    <li class="wow fadeInUp" data-wow-delay="500ms">
-                        <div class="inn">
-                            <figure><img class="ic" src="images/icons/11.png" alt=""></figure>
-                            <h2>Full Mouth Rehabilitation</h2>
-                            <p>Full mouth rehabilitation mainly targets at applying different dental restorative procedures to fix overall oral health. The goal of Oraliah Dental Clinics in Bangalore is to help patients enjoy smiling again as well as to
-                                strengthen and fortify healthy oral tissues and tooth structures for biting efficiency, Full mouth rehabilitation improves the quality of life of a patient</p>
-                        </div>
-                    </li>
-                    <li class="wow fadeInUp" data-wow-delay="600ms">
-                        <div class="inn">
-                            <figure><img class="ic" src="images/icons/6.png" alt=""></figure>
-                            <h2>Best Tooth Implants in Bangalore</h2>
-                            <p>Tooth implants helps to target missing teeth problems, broken teeth, replacing decayed tooth etc. Dental implants are one of the best options for restorative treatment. The dentists at Oraliah Dental Clinics in Bangalore can
-                                guide you in choosing a treatment option that is best for you</p>
-                        </div>
-                    </li>
-                    <li class="wow fadeInUp" data-wow-delay="700ms">
-                        <div class="inn">
-                            <figure><img class="ic " src="images/icons/7.png" alt=""></figure>
-                            <h2>Over Dentures</h2>
-                            <p>They are dentures which are secured to the gum with the help of implants. Dental Surgeons at Oraliah Dental Clinics understand the genuine frustration patients feel with dentures as they don’t stay in place. That’s why Implant
-                                supported dentures or over dentures are recommended by them as the best solution to this problem</p>
-                        </div>
-                    </li>
-                    <li class="wow fadeInUp" data-wow-delay="800ms">
-                        <div class="inn">
-                            <figure><img class="ic wid-inc" src="images/icons/8.png" alt=""></figure>
-                            <h2>Wisdom Teeth</h2>
-                            <p>Wisdom teeth can be very painful, our approach to wisdom teeth is to consider your specific problem & circumstances, we customize your treatment procedure after reviewing your symptoms and make recommendations for treatment,
-                                while adopting a conservative approach whenever & wherever possible </p>
-                        </div>
-                    </li>
-                    <li class="wow fadeInUp" data-wow-delay="900ms">
-                        <div class="inn">
-                            <figure><img class="ic" src="images/icons/9.png" alt=""></figure>
-                            <h2>Gum Disease</h2>
-                            <p>Gum disease is also known as periodontal disease. It is a potentially serious condition as signs of periodontitis (gum disease) aren’t always obvious. As we are one of Bangalore’s best dental clinic, we recommend regular check
-                                up as one of the best ways to confirm whether gum disease could be an issue for you.</p>
-                        </div>
-                    </li>
-                    <li class="wow fadeInUp" data-wow-delay="1s">
-                        <div class="inn">
-                            <figure><img class="ic" src="images/icons/10.png" alt=""></figure>
-                            <h2>Preventive Dentistry in Bangalore</h2>
-                            <p>It is an essential ingredient in a healthy overall approach to oral hygiene, preventive dentistry is essential for keeping and maintaining teeth for life. And it’s at the most spoken approach we tell to our patients. For most
-                                patients, a regular hygiene visit at a dental clinic in Bangalore as part of their preventive dentistry program, is only needed every six months.</p>
-                        </div>
-                    </li>
-                    <!-- <li class="wow fadeInUp" data-wow-delay="1.1s">
-                        <div class="inn">
-                            <figure><img class="ic" src="images/icons/1.png" alt=""></figure>
-                            <h2>Digital Smile Design in Bangalore</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quod non faceret, si in voluptate summum bonum poneret. Quasi vero aut concedatur in omnibus stultis aeque magna esse vitia, et eadem inbecillitate et inconstantia L.
-                                Iam contemni non poteris. Quamquam in hac divisione rem ipsam prorsus probo, elegantiam desidero.</p>
-                        </div>
-                    </li> -->
-                </ul>
+            <h2>How Can Invisalign Help You</h2>
+            <div class="main-in">
+                <div class="left">
+                    <p>Teeth Aligners are unique trays that are practically invisible and are used to accomplish an orthodontic procedure to help misaligned or crooked teeth get moving to a more conventional position. With new scanning technology, our best
+                        dental surgeons in Bangalore can non- i nvasively scan your teeth and create a set of custom fit aligners that will slowly adjust your teeth to the optimal position.
+                    </p>
+                </div>
+                <div class="right">
+                    <ul>
+                        <li>Correct Dental Problems</li>
+                        <li> Highly Comfortable</li>
+                        <li> Promote Better Dental Hygiene</li>
+                        <li> Prevent Associated Dental Issues</li>
+                        <li> Scanning is Non-Invasive</li>
+                        <li> Shorter Treatment Period</li>
+                        <li> Boost self-Confidence</li>
+                        <li> No Limitation in Food & Drinks</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
@@ -223,6 +149,7 @@
             </div>
         </div>
     </section> -->
+
 
     <section class="group_details">
         <div class="container">
