--- a/landing-2/index.html
+++ b/landing-2/index.html
@@ -97,6 +97,17 @@
         </div>
     </section>
 
+    <section class="teeth-sec">
+        <div class="container">
+            <div class="head">
+                <h2>Before & After</h2>
+            </div>
+            <div class="teeth-img">
+                <img src="./images/teeth.png" alt="" />
+            </div>
+        </div>
+    </section>
+
     <section class="about">
         <div class="container">
             <div class="main-d">
@@ -249,7 +260,7 @@
     </section>
     <section class="reg-now wow fadeInDownBig">
         <div class="container">
-            <h2>Find if Dental Aligners are Right for You<br> Register Now Register Today with the Best Dentist in <span> Bangalore!</span>
+            <h2>Find if Dental Aligners are Right for You<br> Register Today with the Best Dentist in <span> Bangalore!</span>
             </h2>
             <button class="btn-co cl_reg">Register Now</button>
         </div>
