--- a/landing-1/index.html
+++ b/landing-1/index.html
@@ -322,7 +322,7 @@
     </section>
     <section class="reg-now wow fadeInDownBig">
         <div class="container">
-            <h2>Find if Dental Aligners are Right for You<br> Register Today with the Best Dentist in <span> Bangalore!</span>
+            <h2>Find if Dental Aligners are Right for You<span class="my-cl"> Register Today with the Best Dentist in <span class="colo-gre"> Bangalore!</span></span>
             </h2>
             <button class="btn-co cl_reg">Register Now</button>
         </div>
