--- a/landing-2/index.html
+++ b/landing-2/index.html
@@ -23,7 +23,7 @@
         <!-- THIS IS HEADER -->
         <header>
             <div class="company_logo wow fadeInDown">
-                <a href="index.html"><img src="images/oralia-logo.png" alt=""></a>
+                <a href="https://oraliahdental.com/" target="_blank"><img src="images/oralia-logo.png" alt=""></a>
             </div>
         </header>
 
@@ -33,18 +33,11 @@
                 <h1 class="common_heading_main wow fadeInDown" data-wow-delay="500ms">Best Dental clinic in Bangalore</h1>
                 <div class="main_inner">
                     <div class="left wow fadeInLeftBig" data-wow-delay="300ms">
-                        <div class="swiper-container our-team">
-                            <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <img src="images/ban.jpg" alt="">
-                                </div>
-                                <div class="swiper-slide">
-                                    <img src="images/ban2.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
-                        </div>
+                        <video width="420" height="300" loop muted  autoplay >
+                            <source src="https://echrontech.com/oraliah/aligners/aligner.mp4" type="video/mp4">
+                            <source src="https://echrontech.com/oraliah/aligners/aligner.ogg" type="video/ogg">
+                            <source src="https://echrontech.com/oraliah/aligners/aligner.ogg" type="video/webm">
+                          </video>
                     </div>
                     <div class="right wow fadeInRightBig" data-wow-delay="300ms">
                         <div class="form-main">
