--- a/landing-3/index.html
+++ b/landing-3/index.html
@@ -40,6 +40,15 @@
                                 <div class="swiper-slide">
                                     <img src="images/ban2.jpg" alt="">
                                 </div>
+                                <div class="swiper-slide">
+                                    <img src="images/ban3.jpg" alt="">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="images/ban4.jpg" alt="">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="images/ban5.jpg" alt="">
+                                </div>
                             </div>
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
