--- a/landing-3/index.html
+++ b/landing-3/index.html
@@ -29,7 +29,7 @@
         <!-- THIS IS FORM -->
         <section class="form_heading">
             <div class="container">
-                <h1 class="common_heading_main wow fadeInDown" data-wow-delay="500ms">Best Dental clinic in Bangalore</h1>
+                <h1 class="common_heading_main wow fadeInDown" data-wow-delay="500ms">Oraliah Dental Clinics</h1>
                 <div class="main_inner">
                     <div class="left wow fadeInLeftBig" data-wow-delay="300ms">
                         <div class="swiper-container our-team">
@@ -84,8 +84,10 @@
                         </div>
                     </div>
 
-                    <p class="wow fadeInUp">Get Comfortable & Affordable Teeth Aligners from the<span> Best Dental Clinic in 
-              Bangalore. Book an Appointment and Get a</span> Free Scanning Done Worth Rs. 7000/- </p>
+                    <p class="wow fadeInUp">Get the accurate restoration for missing teeth from the Best Dental Clinic in Bangalore.<span>For Booking an Online Appointment Please fill in the details below and our</span> team will get in touch with you to schedule your appointment.
+                    </p>
+                    <!-- <p class="wow fadeInUp">Get Comfortable & Affordable Teeth Aligners from the<span> Best Dental Clinic in 
+              Bangalore. Book an Appointment and Get a</span> Free Scanning Done Worth Rs. 7000/- </p> -->
                 </div>
             </div>
         </section>
@@ -93,23 +95,30 @@
 
     <section class="invisalign">
         <div class="container">
-            <h2>How Can Invisalign Help You</h2>
+            <h2>How Can Implants Help You</h2>
             <div class="main-in">
                 <div class="left">
-                    <p>Teeth Aligners are unique trays that are practically invisible and are used to accomplish an orthodontic procedure to help misaligned or crooked teeth get moving to a more conventional position. With new scanning technology, our best
-                        dental surgeons in Bangalore can non- i nvasively scan your teeth and create a set of custom fit aligners that will slowly adjust your teeth to the optimal position.
+                    <p>
+                        An implant is one of the most durable ways of replacing missing or damaged teeth with an artificial fixture that looks and feels exactly like a real tooth. However, successful replacement of teeth using implants is an extremely skill-sensitive process
+                        that requires great expertise.
+                    </p>
+                    <p>
+                        An advanced titanium structure made to anchor a tooth is fixed into the jawbone where the tooth is to be replaced. This structure acts as a support for the artificial tooth or ‘crown’. This mechanism is exactly similar to how a natural tooth anchors itself,
+                        making dental implants the perfect replacement solution.
                     </p>
                 </div>
                 <div class="right">
                     <ul>
-                        <li>Correct Dental Problems</li>
-                        <li> Highly Comfortable</li>
-                        <li> Promote Better Dental Hygiene</li>
-                        <li> Prevent Associated Dental Issues</li>
-                        <li> Scanning is Non-Invasive</li>
+                        <li>Chew & Bite with Ease</li>
+                        <p>As an implant is made to function like a natural tooth, you can enjoy all your favourite food without any problem in biting and chewing.</p>
+                        <li>Look like Your Younger Self</li>
+                        <p>Missing teeth makes your face look sunken and older than your age due to boneless. Implants create a well-balanced jaw line, improve your smile and help you regain a good face structure.</p>
+                        <li>Long Lasting Solution</li>
+                        <p>Dental implants are a long lasting solution. They are strong, very durable, and are long lasting for a lifetime.</p>
+                        <!-- <li> Scanning is Non-Invasive</li>
                         <li> Shorter Treatment Period</li>
                         <li> Boost self-Confidence</li>
-                        <li> No Limitation in Food & Drinks</li>
+                        <li> No Limitation in Food & Drinks</li> -->
                     </ul>
                 </div>
             </div>
@@ -124,6 +133,10 @@
             <div class="teeth-img">
                 <img src="./images/teeth.png" alt="" />
             </div>
+            <p class="wow fadeInUp">
+                Do you want to correct dental problems like overcrowded teeth, Spacing Issues, Minor Overbites & Underbites? Are you no longer in love with your cosmetic braces? With Oraliah Dental, one of the best <span>dental clinics in Bangalore,</span>                patients can enjoy straightened teeth and a beautiful smile with Aligners without any burden. All you need to do is fill up the above registration form and one of <span>Bangalore’s best dentists</span> will call you to fix the time of
+                appointment and also answer to all your queries.
+            </p>
         </div>
     </section>
 
