--- a/landing-3/index.html
+++ b/landing-3/index.html
@@ -4,11 +4,12 @@
 <html lang="en">
 
 <head>
-    <meta name="robots" content="NOINDEX, NOFOLLOW" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oraliah</title>
+    <title>Implant Surgery | Best Dental Clinic in Bangalore</title>
+    <meta name="keywords" content="Implant Surgery | Best Dental Clinic in Bangalore" />
+    <meta name="description" content="Implant Surgery | Best Dental Clinic in Bangalore" />
     <link rel="icon" href="images/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
